# main.go
@@ -10,6 +10,7 @@ import (
 	"syscall"
 	"time"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/prometheus/client_golang/prometheus"
 	"github.com/prometheus/client_golang/prometheus/promhttp"
@@ -50,7 +51,13 @@ func metricsHandlerFunc(c *gin.Context) {
 //	@host		localhost:8080
 //	@BasePath	/api
 
-//	@securityDefinitions.basic	BasicAuth
+//	@securitydefinitions.oauth2.accessCode	OAuth2AccessCode
+//	@tokenUrl								https://gokube.eu.auth0.com/oauth/token
+//	@authorizationurl						https://gokube.eu.auth0.com/authorize
+//	@description							OAuth protections
+//	@scope.read:counter						Grants access to counter get request
+//	@scope.create:counter					Grants access to counter post request
+//	@scope.update:counter					Grants access to counter patch request
 
 // @externalDocs.description	GitHub repository
 // @externalDocs.url			https://github.com/Steadfastie/gokube
@@ -67,6 +74,7 @@ func main() {
 		gin.SetMode(gin.ReleaseMode)
 	}
 
+	router.Use(cors.Default())
 	router.Use(metricsHandlerFunc)
 	router.Use(gin.RecoveryWithWriter(gin.DefaultErrorWriter, infra.RecoveryMiddleware))
 
@@ -78,11 +86,10 @@ func main() {
 		api.GET("/panic/:type", handlers.PanicHandler)
 		counter := api.Group("/counter")
 		{
-			counter.GET(":id", counterController.GetByIdHandler)
-			counter.POST("", counterController.CreateHandler)
-			counter.PATCH(":id", counterController.PatchHandler)
+			counter.GET(":id", infra.AuthMiddleware(infra.ReadCounterScope), counterController.GetByIdHandler)
+			counter.POST("", infra.AuthMiddleware(infra.CreateCounterScope), counterController.CreateHandler)
+			counter.PATCH(":id", infra.AuthMiddleware(infra.ReadCounterScope, infra.UpdateCounterScope), counterController.PatchHandler)
 		}
-
 	}
 	router.GET("/metrics", gin.WrapH(promhttp.Handler()))
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
